Fix #110516: Geometry nodes use attribute toggle boolean values broken

The toggle was added before boolean IDProperties were added. The fix is
to support both integer types and boolean types, similar to a recent
change for other inputs, 9f30555faf92117fe9c8.

Pull Request: https://projects.blender.org/blender/blender/pulls/111433